--- a/App.css
+++ b/App.css
@@ -8,6 +8,7 @@ body {
     background-attachment: fixed;
     /* opacity: 0.7; */
     background-repeat: no-repeat;
+    background-repeat: no-repeat;
 }
 
 .login-form {
